# Spring-2026-Explainable-AI

./: .gitignore  pyproject.toml
homework/: Homework1.ipynb
lectures/: Lecture4-Computing-Diff-Explanations.ipynb  Lecture5-Semantic-Instability-of-Diff-Explanations.ipynb
lectures/runs_mnist/: mnist_cnn.pt
